--- a/tooltip/tooltip.css
+++ b/tooltip/tooltip.css
@@ -2,6 +2,7 @@
 {
     text-align: center;
     color: #fff;
+    background: #000;
     background: rgba(0,0,0,0.8);
     position: absolute;
     z-index: 100;
